# transWARP

./: .gitignore  CMakeLists.txt  go.mod  go.sum  partitions.csv  sdkconfig  sdkconfig.defaults  transWARP.go  transWARPbuilder.sh
main/: CMakeLists.txt  file_server.c  file_serving_common.h  simple_ota.c  transWARP.c
